@@ -33,3 +33,4 @@
 2016-11-03 - V 0.4.0 : New command to get all configurations
 2016-12-23 - V 0.5.0 : New commands to create admin user and to change admin password
 2016-01-11 - V 0.5.1 : Improvement for creating admin user
+2016-01-12 - V 0.6.0 : New command to add index.php files in directories
